--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@ summary: "UCLouvain"
 twitter: "UCLouvain_be"
 ---
 
-{% for post in site.posts limit: 5 %}
-  <article class="index-page">
-    <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
-    {{ post.excerpt }}
-  </article>
-{% endfor %}
+
+<img src="assets/images/aia-text.png" width=50%> 
+<img src="assets/images/uclouvain.png" width=20% align=right> 
+
+
+<p>
+
+Welcome to the website of the AIA research group of the UCLouvain, led by Yves Devilles, Pierre Dupont, Siegfried Nijssen and Pierre Schaus.       
+
+Our research focuses on the algorithmic aspects of artificial intelligence. Topics we study are:
+
+<ul>
+<li> Constraint programming
+<li> Constraint satisfaction and optimization
+<li> Data mining
+<li> Pattern mining
+<li> Explainable artificial intelligence
+<li> Exploratory data analysis
+<li> Machine learning
+<li> Deep learning
+<li> Data visualisation
+<li> Bioinformatics
+</ul>
+
