--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: twitter
 crawlertitle: "The AIA Research Group"
 title: "The AIA Research Group"
 summary: "UCLouvain"
-twitter: "UCLouvain_be"
+twitter: "AIA_UCLouvain"
 ---
 
 
