--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ twitter: "AIA_UCLouvain"
 
 <p>
 
-Welcome to the website of the AIA research group of the UCLouvain, led by Yves Deville, Pierre Dupont, Siegfried Nijssen and Pierre Schaus.       
+Welcome to the website of the AIA research group of the UCLouvain, led by Yves Deville, Pierre Dupont, Sébastien Jodogne, Siegfried Nijssen and Pierre Schaus.       
 
 Our research focuses on the algorithmic aspects of artificial intelligence. Topics we study are:
 
