added medical imaging

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ Our research focuses on the algorithmic aspects of artificial intelligence. Topi
 <li> Machine learning
 <li> Deep learning
 <li> Data visualisation
-<li> Bioinformatics
+<li> Health informatics and bioinformatics
+<li> Medical imaging
 </ul>
 
